# sales_analysis

./: Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
references/: Customer Acquisition.ipynb  EDA.ipynb  Growth.ipynb
